# AI-pdfTranslator

./: .env.example  .replit  INSTALL_GUIDE.md  README.md  app.py  db.sqlite3  download_project.py  local_requirements.txt  manage.py  models.py  pdf_processor.py  pyproject.toml  requirements.txt  routes.py  run_local.py  setup.py  test_pdf.py
ai_pdf_translator/: asgi.py  settings.py  urls.py  wsgi.py
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/fonts/NotoSansTelugu-Regular.ttf/: readme.html
core/templates/: upload.html
downloads/: .gitkeep
instance/: pdf_translator.db
media/pdfs/: sample-translated_3_S4mjsNf.htm
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html
uploads/: .gitkeep
