[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "googletrans==4.0.0rc1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.0",
    "reportlab>=4.4.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
